force-app/main/default/objects/SAJ_MDC_Component_Version__c/SAJ_MDC_Component_Version__c.object-meta.xml
<CustomObject>
    <label>MDC Component Version</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>MDC Component Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDC Components Version</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>