force-app/main/default/objects/SAJ_MDC_Component_Version__c/fields/SAJ_Apex_Annotation__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Apex_Annotation__c</fullName>
    <label>Apex Annotation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SAJ_Apex_Annotation</valueSetName>
    </valueSet>
</CustomField>