force-app/main/default/objects/SAJ_MDC_Component_Version__c/fields/SAJ_Apex_Interface_Class__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Apex_Interface_Class__c</fullName>
    <label>Apex Interface</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Database.Batchable</fullName>
            </value>
            <value>
                <fullName>System.Schedulable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>