force-app/main/default/objects/SAJ_MDC_Component_Version__c/fields/SAJ_Diff__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Diff__c</fullName>
    <formula>(IF(SAJ_Active__c, 
  IF(OR(ISNULL(SAJ_Master_MDC_Key_CRC__c),ISBLANK(SAJ_Master_MDC_Key_CRC__c)), 
    false, 
    IF( SAJ_MDC_Key_CRC__c =  SAJ_Master_MDC_Key_CRC__c, false, true)
   ), 
  false)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diff</label>
    <type>Checkbox</type>
</CustomField>