force-app/main/default/objects/SAJ_MDC_Component_Version__c/fields/SAJ_External_Sharing_model__c.field-meta.xml
<CustomField>
    <fullName>SAJ_External_Sharing_model__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Sharing model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>