force-app/main/default/objects/SAJ_MDC_Component_Version__c/fields/SAJ_Integration_Key__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Integration_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Integration Key</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>