force-app/main/default/objects/SAJ_MDC_Component_Version__c/fields/SAJ_Master_MDC_Key_CRC__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Master_MDC_Key_CRC__c</fullName>
    <formula>SAJ_MDC_Component__r.SAJ_MDC_Component_Source__r.SAJ_MDC_Component_Version__r.SAJ_MDC_Key_CRC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master MDC Key CRC</label>
    <type>Text</type>
</CustomField>