force-app/main/default/objects/SAJ_MDC_Component_Version__c/fields/SAJ_MDC_Component__c.field-meta.xml
<CustomField>
    <fullName>SAJ_MDC_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MDC Component</label>
    <referenceTo>SAJ_MDC_Component__c</referenceTo>
    <relationshipLabel>MDC Components Version</relationshipLabel>
    <relationshipName>MDC_Components_Version</relationshipName>
    <type>Lookup</type>
</CustomField>