force-app/main/default/objects/SAJ_MDC_Component_Version__c/fields/SAJ_MDC_Key__c.field-meta.xml
<CustomField>
    <fullName>SAJ_MDC_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MDC Key</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>