force-app/main/default/objects/SAJ_MDC_Component_Version__c/fields/SAJ_MDC_Key_CRC__c.field-meta.xml
<CustomField>
    <fullName>SAJ_MDC_Key_CRC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>MDC Key CRC</label>
    <length>16</length>
    <type>Text</type>
</CustomField>