force-app/main/default/objects/SAJ_MDC_Component_Version__c/fields/SAJ_ReferenceTo_MDC_Component__c.field-meta.xml
<CustomField>
    <fullName>SAJ_ReferenceTo_MDC_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ReferenceTo_MDC_Component</label>
    <referenceTo>SAJ_MDC_Component__c</referenceTo>
    <relationshipLabel>MDC Components Version (ReferenceTo_MDC_Component__c)</relationshipLabel>
    <relationshipName>MDC_Components_Version1</relationshipName>
    <type>Lookup</type>
</CustomField>