force-app/main/default/objects/SAJ_MDC_Component_Version__c/fields/SAJ_Version__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Version__c</fullName>
    <label>Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>