force-app/main/default/objects/SAJ_MDC_Component_Version__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SAJ_Apex_Annotation__c</field>
        <operation>includes</operation>
        <value>Test Method,Standard Method</value>
    </filters>
    <label>All</label>
</ListView>